--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.10.2
 autopep8==2.0.2
 bcrypt==4.0.1
 click==8.1.3
@@ -6,11 +7,13 @@ email-validator==1.3.1
 Flask==2.2.3
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.2
+Flask-Migrate==4.0.4
 Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.1.1
 idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+Mako==1.2.4
 MarkupSafe==2.1.2
 Pillow==9.4.0
 pycodestyle==2.10.0
