--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 alembic==1.10.2
 autopep8==2.0.2
 bcrypt==4.0.1
+blinker==1.6.3
 click==8.1.3
 dnspython==2.3.0
 email-validator==1.3.1
 Flask==2.2.3
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.2
+Flask-Mail==0.9.1
 Flask-Migrate==4.0.4
 Flask-SQLAlchemy==3.0.3
 Flask-WTF==1.1.1
@@ -17,6 +19,7 @@ Mako==1.2.4
 MarkupSafe==2.1.2
 Pillow==9.4.0
 pycodestyle==2.10.0
+PyJWT==2.8.0
 SQLAlchemy==2.0.5.post1
 tomli==2.0.1
 typing_extensions==4.5.0
