--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,8 @@ click==8.1.7
 comm==0.2.0
 debugpy==1.8.0
 decorator==5.1.1
+dnspython==2.4.2
+email-validator==2.1.0.post1
 executing==2.0.1
 Flask==3.0.0
 Flask-Migrate==4.0.5
