--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.13.0
 appdirs==1.4.4
 appnope==0.1.3
 asttokens==2.4.1
+bcrypt==4.1.1
 blinker==1.7.0
 certifi==2023.11.17
 charset-normalizer==3.3.2
@@ -13,6 +14,7 @@ dnspython==2.4.2
 email-validator==2.1.0.post1
 executing==2.0.1
 Flask==3.0.0
+Flask-Bcrypt==1.0.1
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
