--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ email-validator==2.1.0.post1
 executing==2.0.1
 Flask==3.0.0
 Flask-Bcrypt==1.0.1
+Flask-Login==0.6.3
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
