--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ executing==2.0.1
 Flask==3.0.0
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.3
+Flask-Mail==0.9.1
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
 Flask-WTF==1.2.1
@@ -42,6 +43,7 @@ ptpython==3.0.24
 ptyprocess==0.7.0
 pure-eval==0.2.2
 Pygments==2.17.2
+PyJWT==2.8.0
 pypng==0.20220715.0
 python-dateutil==2.8.2
 pyzmq==25.1.2
